# grman_project_1

./: .gitignore  README.md  example_config.toml  meson.build  meson_options.txt
doc/: _main.tex  algorithmus.tex  bedienung.tex  einleitung.tex  implementierung.tex  literatur.bib
include/: concrete_presenter.h  config.h  event.h  message.h  message_buffer.h  messages.h  presenter.h  ring.h  worker.h
include/presenters/: command_line.h  console_writer.h  logger.h  no_presenter.h  presenter.h
src/: config.cpp  event.cpp  main.cpp  message_buffer.cpp  messages.cpp  ring.cpp  test_main.cpp  worker.cpp
src/concrete_presenter/: command_line.cpp  executor.cpp  presenter.cpp
src/presenters/: command_line.cpp  console_writer.cpp  logger.cpp
src/unit_tests/: main.cpp  message_buffer.cpp  message_buffer_tests.cpp  worker.cpp  worker_tests.cpp
